update browser field value

--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "0.0.1",
   "description": "HTTP I/O for flow.",
   "main": "index.js",
-  "browser": {
-    "./index.js": "client.js",
-    "http": "flowhttp"
-  },
+  "browser": "client.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
