add concat-stream to deps

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/jillix/flow-http#readme",
   "dependencies": {
     "client-sessions": "^0.7.0",
+    "concat-stream": "^1.5.1",
     "flowhttp": "^0.3.0",
     "spdy": "^3.2.0"
   }
